syntax = "proto3";
package pub_worker;
option go_package = "/rpcx/pb";

message GenerateIdReq {
  int64 node = 1;
  string kind = 2;
}

message GenerateIdRes {
  int64 value = 1;
}

message AuthorizeReq {
  string message = 1;
}

message AuthorizeRes {
  string token = 1;
  int64 expired = 2;
}

message PublicKeyReq {
}

message PublicKeyRes {
  string publicKey = 1;
}

service PubWorker{
  rpc GenerateId(GenerateIdReq) returns (GenerateIdRes){}
  rpc Authorize(AuthorizeReq) returns (AuthorizeRes){}
  rpc PublicKey(PublicKeyReq) returns (PublicKeyRes){}
}
